--- a/public/forms.html
+++ b/public/forms.html
@@ -1,11 +1,12 @@
 <DOCTYPE! html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>Please Complete to Join!</title>
 </head>
 
 <body>
-<form action="www.google.com" method="get">
+<form action="api/new, server.js" method="post">
 <fieldset>
 	<legend>Please complete</legend>
 	<label>
@@ -63,11 +64,21 @@
 			<option value="4">4</option>
 			<option value="5">5 or more</option>
 		</select>
+		<br>
+		<br>
+		<input type="submit" value="submit">
+		  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="./client.js"></script>
+	<script type="text/javascript"></script>
+
 	</p>
-	
 </fieldset>
 </form>
 </body>
 </html>
 
-</fieldset>
+
+
+
+
+
